--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.2.1",
     "lucide-react": "^0.438.0",
-    "next": "14.2.7",
+    "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.12.7",
