--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma install"
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@conform-to/react": "^1.1.5",
@@ -22,7 +22,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@uploadthing/react": "^6.7.2",
-    "@upstash/redis": "^1.34.0",
+    "@upstash/redis": "^1.35.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.2.1",
